--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@u-wave/react-vimeo": "^0.9.11",
+    "@vimeo/player": "^2.24.0",
     "bootstrap": "^5.2.1",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
@@ -17,6 +19,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "video.js": "^8.17.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
